# auralis_tts_ui

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  script.py  test.py
tts/: auralis_tts_engine.py
tts_ui/tts/: auralis_tts_engine.py
tts_ui/ui/: __init__.py
tts_ui/utils/: __init__.py  doc_processor.py
