[project]
name = "auralis-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "auralis>=0.2.8.post2",
    "bs4>=0.0.2",
    "gradio>=5.17.1",
    "langchain-text-splitters>=0.3.6",
    "markdown>=3.7",
    "nest-asyncio>=1.6.0",
    "pdfplumber>=0.11.5",
    "sudachidict-core>=20250129",
    "sudachipy>=0.6.10",
    "unidic>=1.1.0",
]
