[project]
name = "auralis-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "auralis>=0.2.8.post2",
    "bs4>=0.0.2",
    "bunkai>=1.5.7",
    "gradio>=5.17.1",
    "jaconv>=0.4.0",
    "langchain-text-splitters>=0.3.6",
    "markdown>=3.7",
    "nest-asyncio>=1.6.0",
    "pdfplumber>=0.11.5",
    "pyrubberband>=0.4.0",
    "sudachidict-core>=20250129",
    "sudachipy>=0.6.10",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
]
